--- a/public/index.html
+++ b/public/index.html
@@ -47,10 +47,7 @@
     <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="GasGuzzlrs website" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -76,7 +73,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <title>Gas Guzzlrs Motors</title>
+    <title>GasGuzzlrs Motors</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
