gear page and bug fixed

--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <title>Gas Guzzlrs Motors</title>
+    <title>Gas Guzzlrs</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
